--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "A simple Node.js project to demonstrate CI/CD",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "node --experimental-modules node_modules/.bin/mocha test/test.mjs"
+    "test": "mocha test/test.mjs"
   },
   "author": "Your Name",
   "license": "ISC",
@@ -13,8 +14,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
-    "esm": "^3.2.25",
-    "mocha": "^10.4.0"
+    "chai": "^4.3.4",
+    "mocha": "^9.2.0",
+    "esm": "^3.2.25"
   }
 }
